force-app/main/default/objects/Customer_Ticket__c/Customer_Ticket__c.object-meta.xml
<CustomObject>
    <label>Customer Ticket</label>
    <nameField>
        <label>Customer  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>