force-app/main/default/objects/Customer_Ticket__c/fields/Issue_releted_to__c.field-meta.xml
<CustomField>
    <fullName>Issue_releted_to__c</fullName>
    <formula>TEXT(Sales_Order__r.Device__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue releted to</label>
    <type>Text</type>
</CustomField>