force-app/main/default/objects/Customer_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress (Default)</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending for Manger Approval</fullName>
            </value>
            <value>
                <fullName>Refund Approved</fullName>
            </value>
            <value>
                <fullName>Refund Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>